Avoid change note published_at wrapping onto another line.

--- a/app/assets/stylesheets/website/page_headers.scss
+++ b/app/assets/stylesheets/website/page_headers.scss
@@ -106,7 +106,7 @@
           width: 70%;
 
           @media only screen and (min-width: 720px) {
-            width: 80%;
+            width: 77%;
           }
         }
 
@@ -121,7 +121,7 @@
           text-align: right;
 
           @media only screen and (min-width: 720px) {
-            width: 17%;
+            width: 20%;
           }
         }
       }
